fixed card stretching bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -578,9 +578,13 @@ footer {
     .card {
       display: flex;
       flex-direction: column;
-      width: 37%;
+      justify-content: space-between;
+      width: 38%;
       min-width: 300px;
-      height: 500px;
+      max-width: 450px;
+      min-height: 500px;
+      // height: min-content;
+      height: min-content;
       background: rgba(255, 255, 255, 0.1);
       border-radius: 25px;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -589,12 +593,12 @@ footer {
       backdrop-filter: blur(5px);
       transform-style: preserve-3d;
       transform: perspective(1000px);
-
+ 
       img {
         position: relative;
         left: 0;
         top: 0;
-        height: 45%;
+        height: 45%; 
         width: 100%;
         border-radius: 25px 25px 0 0;
       }
@@ -609,6 +613,7 @@ footer {
       .extra-content {
         display: flex;
         flex-flow: row nowrap;
+        align-items: flex-end;
         border-radius: 0 0 25px 25px;
         height: 20%;
         width: 100%;
@@ -617,9 +622,10 @@ footer {
           display: flex;
           flex-flow: row wrap;
           justify-content: space-evenly;
+          align-items: flex-start;
           padding: 5px;
           width: 65%;
-          height: 100%;
+          height: 100px;
 
           border-radius: 0 0 0 25px;
 
@@ -645,11 +651,11 @@ footer {
         .project-links {
           display: flex;
           flex-flow: column nowrap;
-          justify-content: center;
           align-items: center;
           width: 35%;
           height: 100%;
           border-radius: 0 0 25px 0;
+          margin-bottom: 15px;
           a {
             background: transparent;
             border-radius: 25px;
@@ -907,20 +913,23 @@ footer {
   text-decoration: none;
   cursor: pointer;
 }
-@media screen and (max-width: 1200px) {
-  #home {
-    flex-direction: column;
-  }
-  .cube {
-    transform: scale(0.4);
-  }
-  //   .front {
-  //     transform: translateZ(50px);
-  //   }
-}
+// @media screen and (max-width: 1200px) {
+//   #home {
+//     flex-direction: column;
+//   }
+//   .cube {
+//     transform: scale(0.4);
+//   }
+//   //   .front {
+//   //     transform: translateZ(50px);
+//   //   }
+// }
 
 // Large desktop display
 @media screen and (max-width: 1200px) {
+  // .card {
+  //   height: 60vh;
+  // }
   #home {
     align-items: center;
     justify-content: center;
@@ -1045,10 +1054,10 @@ footer {
     #personal-content {
       width: 40%;
       justify-content: space-between;
-      #self-photo {
-        // height: 400px;
-        // width: 300px;
-      }
+      // #self-photo {
+      //   // height: 400px;
+      //   // width: 300px;
+      // }
       #content-text {
         width: 1000px;
         p {
